cmake reorg + catch benchmark

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 option(BUILD_TESTING "Build unit tests" OFF)
+option(BUILD_PYTHON_WRAPPER "Build Python Wrapper" ON)
 
 if (MSVC)
     add_compile_options(/arch:AVX2 /MT /Zc:__cplusplus)
@@ -32,25 +33,29 @@ set(QLIBC_SOURCES
         src/permanent_ryser.h
         src/sub_permanents.h)
 
-add_subdirectory(extern/pybind11)
-pybind11_add_module(quandelibc src/python_wrapper.cpp ${QLIBC_SOURCES})
+add_library(quandelibc-lib STATIC ${QLIBC_SOURCES})
+set_property(TARGET quandelibc-lib PROPERTY POSITION_INDEPENDENT_CODE ON)
 
-target_compile_definitions(quandelibc PRIVATE VERSION_INFO=${VERSION_INFO})
-
-add_executable(test_permanent-int src/test_permanent.cpp ${QLIBC_SOURCES})
-target_link_libraries(test_permanent-int ${CMAKE_THREAD_LIBS_INIT})
-target_compile_definitions(test_permanent-int PUBLIC P_INT)
-
-add_executable(test_permanent-float src/test_permanent.cpp ${QLIBC_SOURCES})
-target_link_libraries(test_permanent-float ${CMAKE_THREAD_LIBS_INIT})
-target_compile_definitions(test_permanent-float PUBLIC P_FLOAT)
-
-add_executable(test_permanent-complex src/test_permanent.cpp ${QLIBC_SOURCES})
-target_link_libraries(test_permanent-complex ${CMAKE_THREAD_LIBS_INIT})
-target_compile_definitions(test_permanent-complex PUBLIC P_COMPLEX)
+if (BUILD_PYTHON_WRAPPER)
+    add_subdirectory(extern/pybind11)
+    pybind11_add_module(quandelibc src/python_wrapper.cpp)
+    target_link_libraries(quandelibc PRIVATE quandelibc-lib)
+    target_compile_definitions(quandelibc PRIVATE VERSION_INFO=${VERSION_INFO})
+endif(BUILD_PYTHON_WRAPPER)
 
 ## ----------------------- Tests ----------------------- ##
 if (BUILD_TESTING)
-    include(CTest)
+    add_executable(test_permanent-int src/test_permanent.cpp)
+    target_link_libraries(test_permanent-int PRIVATE quandelibc-lib ${CMAKE_THREAD_LIBS_INIT})
+    target_compile_definitions(test_permanent-int PUBLIC P_INT)
+
+    add_executable(test_permanent-float src/test_permanent.cpp)
+    target_link_libraries(test_permanent-float PRIVATE quandelibc-lib ${CMAKE_THREAD_LIBS_INIT})
+    target_compile_definitions(test_permanent-float PUBLIC P_FLOAT)
+
+    add_executable(test_permanent-complex src/test_permanent.cpp)
+    target_link_libraries(test_permanent-complex PRIVATE quandelibc-lib ${CMAKE_THREAD_LIBS_INIT})
+    target_compile_definitions(test_permanent-complex PUBLIC P_COMPLEX)
+
     add_subdirectory(tests)
 endif ()
