--- a/.github/workflows/cpp-tests.yml
+++ b/.github/workflows/cpp-tests.yml
@@ -19,8 +19,8 @@ env:
   BUILD_TYPE: Release
 
 jobs:
-  build:
-    if: github.event_name == 'release' || github.event.inputs.build_test
+  auto-tests:
+    if: (github.event_name == 'release') || github.event.inputs.build_test
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
